# server/src/controllers/auth.controller.ts
@@ -3,6 +3,7 @@ import { Body, Controller, Get, Path, Post, Query, Route, Security, SuccessRespo
 import { Connection, createConnection, getCustomRepository } from "typeorm";
 import { LoginModel } from "../models/login.model";
 import { LoginResponseModel } from "../models/login.response.model";
+import { RegistrationModel } from '../models/registration.model';
 import { AuthRepository } from "../repositories/auth.repository";
 
 @Route("auth")
@@ -16,23 +17,6 @@ export class AuthController extends Controller {
   @Get("checktoken")
   @Security('token')
   public async CheckToken(@Request() request: express.Request): Promise<boolean> {
-    // const token = request.headers["Authorization"] || request.headers["authorization"];
-    // if (token) {
-    //   const session = await getCustomRepository(AuthRepository).getSession(token.toString());
-    //   if (session) {
-    //     let validTo = new Date()
-    //     validTo.setTime(session.lastAccess.getTime() + parseInt(process.env.SESSION_TIMEOUT_MINUTE as string, 10) * 60 * 1000);
-
-    //     return new LoginResponseModel({
-    //       email: session.user.email,
-    //       name: session.user.name,
-    //       roles: session.user.roles.map(r => r.name),
-    //       token: session.token,
-    //       validTo: validTo
-    //     });
-    //   }
-    // }
-    // return undefined;
     return true;
   }
 
@@ -43,6 +27,11 @@ export class AuthController extends Controller {
       return await getCustomRepository(AuthRepository).deleteSession(token.toString());
     }
     return true;
+  }
+
+  @Post("registration")
+  public async regisztration(@Body() model: RegistrationModel): Promise<LoginResponseModel> {
+    return await getCustomRepository(AuthRepository).registerUser(model);
   }
 
 }
